terraform-aws/modules/vpc/route_table.tf

# Public Route Table (attached to the Internet Gateway)
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.demo_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.demo_igw.id
  }

  tags = {
    Name      = "public_route_table"
    Terraform = "yes"
  }
}

# Route Table Association for Public Subnet
resource "aws_route_table_association" "public_route_table_assoc_a" {
  subnet_id      = aws_subnet.public_subnet_a.id
  route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "public_route_table_assoc_b" {
  subnet_id      = aws_subnet.public_subnet_b.id
  route_table_id = aws_route_table.public_route_table.id
}


# Private Route Table (no internet access directly)
resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.demo_vpc.id

  tags = {
    Name      = "private_route_table"
    Terraform = "yes"
  }
}

# Route Table Association for Private Subnet
resource "aws_route_table_association" "private_route_table_assoc_a" {
  subnet_id      = aws_subnet.private_subnet_a.id
  route_table_id = aws_route_table.private_route_table.id
}

resource "aws_route_table_association" "private_route_table_assoc_b" {
  subnet_id      = aws_subnet.private_subnet_b.id
  route_table_id = aws_route_table.private_route_table.id
}
